added backbone with first tutorial.

--- a/mvc4-webapi-backbone/Views/Shared/_Layout.cshtml
+++ b/mvc4-webapi-backbone/Views/Shared/_Layout.cshtml
@@ -11,6 +11,9 @@
     @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/underscore")
+    @Scripts.Render("~/bundles/backbone")
+    @Scripts.Render("~/bundles/main")
     @RenderSection("scripts", required: false)
 </body>
 </html>
